# delivery-track

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.py  healthcheck.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  run.py
data/: cuisine_time_dataset.csv  cuisine_time_dataset1.csv  enhanced_delivery_dataset.csv  maps
data/persistent/: app_state_backup_20251016_092042.json  app_state_backup_20251016_092101.json  app_state_backup_20251016_092203.json  app_state_backup_20251016_092223.json  deliveries_backup_20251016_092042.json  deliveries_backup_20251016_092101.json  deliveries_backup_20251016_092203.json  deliveries_backup_20251016_092223.json  drivers_backup_20251016_092042.json  drivers_backup_20251016_092101.json  drivers_backup_20251016_092203.json  drivers_backup_20251016_092223.json  graph_backup_20251016_092042.json  graph_backup_20251016_092203.json  graph_backup_20251016_092223.json
env/: __init__.py  environment.py  graders.py  models.py  tasks.py
server/: __init__.py  app.py
src/: main.py
src/algorithms/: __init__.py  bfs.py  dfs.py  routing.py
src/config/: settings.py
src/gui/: main_window.py
src/ml/: demand_predictor.py  time_predictor.py
src/models/: __init__.py  delivery.py  driver.py  graph.py
src/services/: __init__.py  assignment_service.py  google_maps_api.py  map_service.py  tracking_service.py
src/utils/: cuisine_time_calculator.py  data_generator.py  graph_builder.py  image_map_creator.py  real_time_map.py  time_calculator.py
