[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "delivery-tracker-openenv"
version = "1.0.0"
description = "OpenEnv Delivery Tracker benchmark"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "u1krsh" }
]
dependencies = [
  "openenv-core>=0.2.0",
  "pydantic>=2.0,<3.0",
  "openai>=2.7.2,<3.0",
  "huggingface-hub>=0.20",
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "requests>=2.31",
  "pyyaml>=6.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "src*", "ml*"]
